--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2015-2018</span>
-						<h2>Financial Analyst/Auditor</h2>
+						<h2>Financial Analyst/Associate Auditor</h2>
 						<span class="position">Seshachalam & Co (The Praxity Alliance)</span>
 						<!-- <p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.  -->
 							<ul>
