--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 								<h2 class="mb-4">About Me</h2>
 								
 								<p>With over 5 years of comprehensive experience in the field of auditing & analytics, accompanied by a master's degree in business analytics. 
-									Proficient in data analysis, financial modeling &amp; KPI reporting to cross-functional partners. 
+									Proficient in data analysis, financial modeling &amp; reporting to cross-functional partners. 
 									Demonstrated success in leading impactful projects and providing actionable insights.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Financial Reporting, Auditing &amp; Analytics</span></li>
