--- a/index.html
+++ b/index.html
@@ -279,16 +279,16 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With over 5 years of comprehensive experience in the field of auditing & analytics, accompanied by a master's degree in business analytics. 
-									Proficient in data analysis, financial modeling &amp; reporting to cross-functional partners. 
-									Demonstrated success in leading impactful projects and providing actionable insights.</p>
+								<p>With over 5 years of comprehensive experience in the field of auditing & analytics, accompanied by a master's degree in business analytics, I'm 
+									proficient in data analysis, financial modeling &amp; reporting to cross-functional partners. 
+									I have demonstrated success in leading impactful projects and providing actionable insights.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Financial Reporting, Auditing &amp; Analytics</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Financial Services, Healthcare, CPG, Logistics, Energy, Construction, Technology &amp; Manufacturing</span></li>
 									<li class="d-flex"><span>Education:</span> <span>MSc Business Analytics(STEM), Chartered Accountancy </span></li>
 									<!-- <li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li> -->
 									<li class="d-flex"><span>Membership:</span> <span>Associate Chartered Accountant, ICAI</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Alteryx, PowerPoint, Managerial Accounting, SOX Audit, Machine Learning &amp; Financial Modeling</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Alteryx, PowerPoint, Financial and Managerial Accounting, Machine Learning &amp; Financial Modeling</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Hiking, Journaling</span></li>
 									
 								</ul>
