--- a/index.html
+++ b/index.html
@@ -354,18 +354,14 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">2015-2018</span>
-						<h2>Financial Analyst/Associate Auditor</h2>
-						<span class="position">Seshachalam & Co (The Praxity Alliance)</span>
+						<h2>Senior Associate</h2>
+						<span class="position">PricewaterhouseCoopers</span>
 						<!-- <p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.  -->
 							<ul>
-								<li>Drove annual operating plans and quarterly forecasts by preparing detailed MIS reports to deliver insights on cash flow management,
-									operating cost rationalization, revenue forecasting and receivables aging.</li>
-								<li>Partnered with various departments to maintain and enhance financial models, prepared monthly journal entries and conducted
-									monthly reviews to provide feedback on preliminary month-end accounting results .</li>
-								<li>Monitored KPI’s to analyze and account for unexpected model and budget variances, ensuring continuous updates to forecasting and
-									planning models by developing and operationalizing KPI reporting based on leading and lagging indicators.</li>
-							    <li>Built and maintained strong, collaborative relationships with key business partners, providing engagement support for business cases
-									across various functions, and generating reports for senior leadership and the board of directors.</li>
+								<li>Spearheaded the end-to-end execution of multiple audit engagements, tailoring audit objectives in consultation with the engagement partners after assessing the underlying audit risks in the client’s control environment.</li>
+								<li>Audited the investments FSLI with relevance to their purchases, harvests, valuation, capital schedules, commitments, cancellations, confirmations, master/feeder allocations, unrecorded liabilities, and unpredictability procedures.</li>
+								<li>Assessed risk management strategies and complex fund structures related to investment operations within employee benefit plans, private equity funds, and insurance sectors to validate compliance with reporting and regulatory requirements.</li>
+							    <li>Conducted thorough reviews of audit work paper documentation, including narratives, test results, identified and resolved issues, ensuring accuracy and completeness while mentoring associates to enhance their technical acumen.</li>
 							</ul>
 						</p>
 					</div>
