--- a/index.html
+++ b/index.html
@@ -333,18 +333,15 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2021-2023</span>
+						<span class="date">2024-Present</span>
 						<h2>Senior Associate</h2>
-						<span class="position">PricewaterhouseCoopers</span>
+						<span class="position">KPMG</span>
 						<!-- <p class="mt-4">Merkle, a leading CXM and media company with over 10K+ professionals globally. It's a part of Dentsu International.  -->
 						  <ul>						
-						     <li>Spearheaded the end-to-end execution of multiple audit engagements with an 8-member team, evaluating the operative effectiveness of key internal controls within business processes and conducted detailed testing of significant
-								account balances and transactions.</li>
-						     <li>Audited investments with relevance to their purchases, harvests, valuation, capital schedules, commitments,
-								cancellations, confirmations, master/feeder allocations, unrecorded liabilities, and unpredictability procedures.</li>
-						     <li>Conducted thorough reviews of audit work paper documentation, including narratives, test results, and identified issues, ensuring
-								accuracy and completeness while mentoring associates to enhance their technical acumen.</li>
-							<li>Ensured that financial statements were prepared and compliant under US GAAP/US GAAS/IFRS/IAS, local laws, and regulations.</li>
+						     <li>Supervised the performance audit of medical agencies’ cost reports submitted for Medicaid, ensuring accuracy, compliance, and adherence to federal and state regulations.</li>
+						     <li>Evaluated the financial integrity of cost reports by verifying reported expenses, highlighting inconsistencies, and conforming that claims align with Medicaid guidelines.</li>
+						     <li>Analyzed large populations of healthcare data to identify trends, anomalies, and potential issues within Medicaid cost reports.</li>
+							<li>Developed and maintained audit documentation, including workpapers, detailed memos, and agendas for weekly status meetings, while reviewing supporting materials and presenting findings to managers.</li>
 							</ul>
 						</p>
 					</div>
@@ -353,7 +350,7 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">2015-2018</span>
+						<span class="date">2021-2023</span>
 						<h2>Senior Associate</h2>
 						<span class="position">PricewaterhouseCoopers</span>
 						<!-- <p class="mt-4">iQuanti is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.  -->
